# kitsune

./: Cargo.toml
crates/kitsune-fe-native/: Cargo.toml  build.rs
crates/kitsune-fe-native/src/: instance.rs  lib.rs  oauth.rs  schema.rs  state.rs
crates/kitsune-fe-native/src/components/: auth.rs  form.rs  mod.rs
crates/kitsune-fe-native/src/pages/: home.rs  mod.rs  not_found.rs  oauth.rs  register.rs  timeline.rs
kitsune/: Cargo.toml
kitsune/src/: main.rs
kitsune/src/http/: frontend.rs  mod.rs
kitsune/src/http/graphql/: mod.rs
public/: style.css  style.scss
xtask/: Cargo.toml
xtask/src/: build_graphql_schema.rs  main.rs
