[package]
name = "xtask"
edition = "2021"
version = "0.0.0"
publish = false

[dependencies]
kitsune = { path = "../kitsune" }
async-graphql = { version = "6.0.10", default-features = false, features = [
    "playground",
    "tempfile",
    "time",
    "tracing",
    "unblock",
    "uuid",
] }
anyhow = "1.0.75"
argh = "0.1.12"
glob = "0.3.1"
rsass = "0.28.2"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "ansi",
    "fmt",
] }
