[package]
name = "kitsune-fe-native"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-simd = "0.8.0"
cynic = { version = "3.2.2", features = ["http-surf"] }
dioxus = "0.4.0"
dioxus-router = "0.4.0"
iso8601-timestamp = "0.2.12"
serde = { version = "1.0.192", features = ["derive"] }
serde_urlencoded = "0.7.1"
sir = { version = "0.4.0", features = [ "dioxus" ] }
surf = "2.3.2"
tokio = { version = "1.33.0", features = ["macros", "rt"] }

[build-dependencies]
cynic-codegen = { version = "3.2.2" }
